# SamplePlayer

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/file/: P86.cpp  P86.h
src/sample/: Sample.h  SampleAudioSource.cpp  SampleAudioSource.h
src/ui/: CustomMessage.h  ExportSettingsView.cpp  ExportSettingsView.h  NestableGrid.cpp  NestableGrid.h  SampleListModel.cpp  SampleListModel.h  SampleListView.cpp  SampleListView.h  SamplingRateTextEditor.cpp  SamplingRateTextEditor.h
test/: CMakeLists.txt
test/src/: ModelTest.cpp
